--- a/index.html
+++ b/index.html
@@ -23,64 +23,109 @@
 <section class="heroImg">
   <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
     <div class="navbar-brand">
-      <img src="logo.png" width="150px"></div>
+      <a href="https://colettegiacometti.github.io/UX_UI_HW_22/"><img src="logo.png" width="150px"></a></div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Menu</a>
+          <a class="nav-link" href="https://colettegiacometti.github.io/UX_UI_HW_22_Menu/">Menu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+          <a class="nav-link" href="https://colettegiacometti.github.io/UX_UI_HW_22_Events/">Events</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Hours & Location</a>
+          <a class="nav-link" href="https://colettegiacometti.github.io/UX_UI_HW_22_Hours-Loc/">Hours & Location</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Reviews</a>
+          <a class="nav-link" href="https://colettegiacometti.github.io/UX_UI_HW_22_Reviews/">Reviews</a>
         </li>
       </ul>
     </div>
   </nav>
-</section>
-    <!-- End navigation bar -->
-<section style="background-color:#1F1913">
+
   <div class="title">
     <div class="content">
-        <h1 class="heroText">Welcome to Lakeview Lounge</h1>
-        <h4 class="heroText">Established since 1975</h4>
+        <h1 class="heroText">Menu</h1>
     </div>
   </div> 
 
-  <div style="background-color:#1F1913">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <div class="card" style="width: 18rem; background-color:#F7D26D">
-            <img src="location.png" class="card-img-top" alt="...">
-            <div class="card-body" style="background-color:#F7D26D">
-              <p class="card-text">Location</p>
+  <div class="text">
+        <h3>On Draft</h3>
+        <h4>$3.50</h4>
+        <div class="card-deck">
+          <span class="border border-white">
+          <div class="card" style="background-color: transparent">
+            <div class="card-body" style="width: 32rem;">
+              <div>
+                <ul>
+                  <li>Coors</li>
+                  <li>Coors Banquet</li>
+                </ul>
             </div>
           </div>
-        </div>
-        <div class="col-sm">
-          <div class="card" style="width: 18rem; background-color:#F7D26D">
-            <img src="menu.png" class="card-img-top" alt="...">
-            <div class="card-body" style="background-color:#F7D26D">
-              <p class="card-text">Menu</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="card" style="width: 18rem; background-color:#F7D26D">
-            <img src="events.png" class="card-img-top" alt="...">
-            <div class="card-body" style="background-color:#F7D26D">
-              <p class="card-text">Upcoming Events</p>
-            </div>
-          </div>
-        </div>
+        </span>
       </div>
     </div>
-  </div>
+      
+
+        <h3>Bottles/Cans</h3>
+        <h4>$4 Domestic<br>$5 Imports</h4>
+        <div class="card-deck">
+          <span class="border border-white">
+          <div class="card" style="background-color: transparent;">
+            <div class="card-body" style="width: 32rem;">
+              <div>
+                <ul>
+                  <li>Michelob</li>
+                  <li>Mich Ultra</li>
+                  <li>Modelo</li>
+                  <li>Ska Mexican Lager</li>
+                  <li>Telluride Fishwater Douple IPA</li>
+                  <li>Cerebral Hazy IPA</li>
+                  <li>La Folie Sour Brown </li>
+                  <li>Coors Banquet</li>
+                  <li>Budweiser</li>
+                  <li>Bud Lite</li>
+                  <li>Stem</li>
+                  <li>Stem Raspberry Apple</li>
+                </ul>
+            </div>
+          </div>
+        </span>
+      </div>
+    </div>
+
+
+        <h3>Mystery Shots</h3>
+        <div class="card-deck ml-auto">
+          <span class="border border-white">
+          <div class="card" style="background-color: transparent">
+            <div class="card-body" style="width: 32rem;">
+              <div>
+                <br>
+                <h4>$2.50 Mystery Shots for the brave</h4>
+                <br>
+            </div>
+          </div>
+        </span>
+      </div>
+    </div>
+
+
+        <h3>Limited Food menu</h3>
+        <div class="card-deck">
+          <span class="border border-white">
+          <div class="card" style="background-color: transparent">
+            <div class="card-body" style="width: 32rem;">
+              <div>
+                <br>
+                <h4>Rotating Food Menu with limited options available</h4>
+                <br>
+            </div>
+          </div>
+        </span>
+      </div>
+    </div>
+  </div> 
   </section>
 
 
