--- a/index.html
+++ b/index.html
@@ -42,91 +42,92 @@
     </div>
   </nav>
 
-  <div class="title">
-    <div class="content">
-        <h1 class="heroText">Menu</h1>
-    </div>
-  </div> 
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">          
+        </div>
+          <div class="col  text-center">
+            <div class="title">
+              <div class="content">
+                  <h1 class="heroText">Menu</h1>
+              </div>
+            </div> 
+            <div class="text">
+                  <h3>On Draft</h3>
+                  <h4>$3.50</h4>
+                  <div class="card-deck">
+                    <span class="border border-white">
+                    <div class="card" style="background-color: rgb(11,14,19,0.4);">
+                      <div class="card-body" style="width: 32rem;">
+                        <div>
+                          <p>
+                            Coors</br>
+                            Coors Banquet
+                          </p>
+                      </div>
+                    </div>
+                  </span>
+                </div>
+              </div>
+                  <h3>Bottles/Cans</h3>
+                  <h4>$4 Domestic<br>$5 Imports</h4>
+                  <div class="card-deck">
+                    <span class="border border-white">
+                    <div class="card" style="background-color:rgb(11,14,19,0.4);">
+                      <div class="card-body" style="width: 32rem;">
+                        <div>
+                          <p>
+                            Michelob<br>
+                            Mich Ultra<br>
+                            Modelo<br>
+                            Ska Mexican Lager<br>
+                            Telluride Fishwater Douple IPA<br>
+                            Cerebral Hazy IPA<br>
+                            La Folie Sour Brown<br>
+                            Coors Banquet<br>
+                            Budweiser<br>
+                            Bud Lite<br>
+                            Stem<br>
+                            Stem Raspberry Apple
+                          </p>
+                      </div>
+                    </div>
+                  </span>
+                </div>
+              </div>
+                  <h3>Mystery Shots</h3>
+                  <div class="card-deck ml-auto">
+                    <span class="border border-white">
+                    <div class="card" style="background-color:rgb(11,14,19,0.4);">
+                      <div class="card-body" style="width: 32rem;">
+                        <div>
+                          <br>
+                          <h4>$2.50 Mystery Shots for the brave</h4>
+                          <br>
+                      </div>
+                    </div>
+                  </span>
+                </div>
+              </div>
+                  <h3>Limited Food Menu</h3>
+                  <div class="card-deck">
+                    <span class="border border-white">
+                    <div class="card" style="background-color:rgb(11,14,19,0.4);">
+                      <div class="card-body" style="width: 32rem;">
+                        <div>
+                          <br>
+                          <h4>Rotating Food Menu with limited options available</h4>
+                          <br>
+                      </div>
+                    </div>
+                  </span>
+                </div>
+              </div>
+            </div> 
+          </section>
+        </section>
 
-  <div class="text">
-        <h3>On Draft</h3>
-        <h4>$3.50</h4>
-        <div class="card-deck">
-          <span class="border border-white">
-          <div class="card" style="background-color: transparent">
-            <div class="card-body" style="width: 32rem;">
-              <div>
-                <ul>
-                  <li>Coors</li>
-                  <li>Coors Banquet</li>
-                </ul>
-            </div>
-          </div>
-        </span>
-      </div>
-    </div>
-      
-
-        <h3>Bottles/Cans</h3>
-        <h4>$4 Domestic<br>$5 Imports</h4>
-        <div class="card-deck">
-          <span class="border border-white">
-          <div class="card" style="background-color: transparent;">
-            <div class="card-body" style="width: 32rem;">
-              <div>
-                <ul>
-                  <li>Michelob</li>
-                  <li>Mich Ultra</li>
-                  <li>Modelo</li>
-                  <li>Ska Mexican Lager</li>
-                  <li>Telluride Fishwater Douple IPA</li>
-                  <li>Cerebral Hazy IPA</li>
-                  <li>La Folie Sour Brown </li>
-                  <li>Coors Banquet</li>
-                  <li>Budweiser</li>
-                  <li>Bud Lite</li>
-                  <li>Stem</li>
-                  <li>Stem Raspberry Apple</li>
-                </ul>
-            </div>
-          </div>
-        </span>
-      </div>
-    </div>
-
-
-        <h3>Mystery Shots</h3>
-        <div class="card-deck ml-auto">
-          <span class="border border-white">
-          <div class="card" style="background-color: transparent">
-            <div class="card-body" style="width: 32rem;">
-              <div>
-                <br>
-                <h4>$2.50 Mystery Shots for the brave</h4>
-                <br>
-            </div>
-          </div>
-        </span>
-      </div>
-    </div>
-
-
-        <h3>Limited Food menu</h3>
-        <div class="card-deck">
-          <span class="border border-white">
-          <div class="card" style="background-color: transparent">
-            <div class="card-body" style="width: 32rem;">
-              <div>
-                <br>
-                <h4>Rotating Food Menu with limited options available</h4>
-                <br>
-            </div>
-          </div>
-        </span>
-      </div>
-    </div>
-  </div> 
-  </section>
 
 
 <!-- Footer -->
