updated food and bg pic

--- a/index.html
+++ b/index.html
@@ -47,18 +47,21 @@
       <div class="row">
         <div class="col text-center">          
         </div>
-          <div class="col  text-center">
+          <div class="col  text-center"  style="background-color: rgb(11,14,19,0.4);">
             <div class="title">
               <div class="content">
                   <h1 class="heroText">Menu</h1>
               </div>
             </div> 
-            <div class="text">
-                  <h3>On Draft</h3>
-                  <h4>$3.50</h4>
+<div>
+  <img src="deco.png" width="50%">
+</div>
+
                   <div class="card-deck">
-                    <span class="border border-white">
-                    <div class="card" style="background-color: rgb(11,14,19,0.4);">
+                    <div class="text">
+                    <h3>On Draft</h3>
+                    <h4>$3.50</h4>
+                    <div class="card"  style="background-color:transparent">
                       <div class="card-body" style="width: 32rem;">
                         <div>
                           <p>
@@ -67,16 +70,17 @@
                           </p>
                       </div>
                     </div>
-                  </span>
                 </div>
               </div>
-                  <h3>Bottles/Cans</h3>
-                  <h4>$4 Domestic<br>$5 Imports</h4>
+              <div>
+                <img src="deco.png" width="50%">
+              </div>
                   <div class="card-deck">
-                    <span class="border border-white">
-                    <div class="card" style="background-color:rgb(11,14,19,0.4);">
+                    <div class="card" style="background-color:transparent">
                       <div class="card-body" style="width: 32rem;">
                         <div>
+                          <h3>Bottles/Cans</h3>
+                          <h4>$4 Domestic<br>$5 Imports</h4>
                           <p>
                             Michelob<br>
                             Mich Ultra<br>
@@ -93,35 +97,40 @@
                           </p>
                       </div>
                     </div>
-                  </span>
                 </div>
               </div>
-                  <h3>Mystery Shots</h3>
-                  <div class="card-deck ml-auto">
-                    <span class="border border-white">
-                    <div class="card" style="background-color:rgb(11,14,19,0.4);">
+              <div>
+                <img src="deco.png" width="50%">
+              </div>
+                  <div class="card-deck">
+                    <div class="card"  style="background-color:transparent">
                       <div class="card-body" style="width: 32rem;">
                         <div>
+                          <h3>Mystery Shots</h3>
                           <br>
                           <h4>$2.50 Mystery Shots for the brave</h4>
                           <br>
                       </div>
                     </div>
-                  </span>
                 </div>
               </div>
-                  <h3>Limited Food Menu</h3>
+              <div>
+                <img src="deco.png" width="50%">
+              </div>
                   <div class="card-deck">
-                    <span class="border border-white">
-                    <div class="card" style="background-color:rgb(11,14,19,0.4);">
+                    <div class="card"  style="background-color:transparent">
                       <div class="card-body" style="width: 32rem;">
                         <div>
+                          <h3>Limited Food Menu</h3>
                           <br>
-                          <h4>Rotating Food Menu with limited options available</h4>
+                          <h4>Chimichanga<br>
+                            French Fries<br>
+                            Chips<br>
+                            Tacos
+                          </h4>
                           <br>
                       </div>
                     </div>
-                  </span>
                 </div>
               </div>
             </div> 
